# camera-cream

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  readme.md  version.cmake
include/: CameraDevice.hpp  StreamManager.hpp  StreamServer.hpp  V4L2Camera.hpp  Version.hpp.in
src/: CameraDevice.cpp  StreamManager.cpp  StreamServer.cpp  V4L2Camera.cpp
